--- a/test.html
+++ b/test.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+	
+	<div><p>Drag the king around. Is there an unexpected white background?</p></div>
 
 	<table>
 		<tr><td class="draggabletest" draggable="true"></td></tr>
